<resources>
    <string name="app_name">检测报告客户端</string>

    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_exist_username">This userName is exist!</string>
    <string name="error_invalid_password">This password is too short,it needs at least 6 characters</string>
    <string name="error_register_fail">注册失败！</string>
    <string name="error_field_required">此处不能为空</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_register">注册</string>
    <string name="title_activity_register">Register</string>
    <string name="baseURL">http://118.89.112.146/drc-1.0/</string>
    <string name="error_invalid_password_null">密码不能为空</string>
    <string name="error_invalid_userName_null">用户名不能为空</string>

    <string name="add">添加</string>
    <string name="back">返回</string>
    <string name="setting">设置</string>
    <string name="delete">删除</string>
    <string name="nav_header_username">用户名</string>
    <string name="changeUser">切换用户</string>
    <string name="main_title">所有检测报告</string>
    <string name="main_new_report">新建报告</string>
    <string name="new_report_title">新建检测报告</string>
    <string name="action_sign_up">注册</string>
    <string name="error_register_check_exist">用户已存在</string>
    <string name="error_register_check_no_exist">可以注册</string>
    <string name="error_login_fail">登陆失败，请确认在绑定的手机上登陆并确认账户密码正确</string>


</resources>
