<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.LoginActivity">

    <include layout="@layout/toolbar_base" />
    <ScrollView
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:visibility="gone" />
            <RelativeLayout
                android:id="@+id/ic_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_100">
                <!--<de.hdodenhof.circleimageview.CircleImageView-->
                    <!--android:id="@+id/icon_image"-->
                    <!--android:layout_width="70dp"-->
                    <!--android:layout_height="70dp"-->
                    <!--android:layout_centerInParent="true"-->
                    <!--android:src="@drawable/nav_icon" />-->
            </RelativeLayout>
            <LinearLayout
                android:layout_below="@+id/ic_header"
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">
                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/remmber"
                        android:layout_width="wrap_content"
                        android:text="记住密码"
                        android:layout_height="wrap_content" />
                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/autoLogin"
                        android:layout_width="wrap_content"
                        android:text="自动登录"
                        android:layout_height="wrap_content" />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <Button
                        android:id="@+id/email_sign_in_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/action_sign_in"
                        android:textStyle="bold" />
                    <Button
                        android:id="@+id/register_button"
                        style="?android:textAppearanceSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1"
                        android:text="@string/action_register"
                        android:textStyle="bold" />
                </LinearLayout>
                <Button
                    android:id="@+id/localuser"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:visibility="invisible"
                    android:text="本地数据库用户"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</LinearLayout>